--- a/dht22/frontend/src/App.css
+++ b/dht22/frontend/src/App.css
@@ -1,34 +1,70 @@
+html, body {
+  height: 100%; /* Garante que html e body ocupem 100% da altura da tela */
+  margin: 0; /* Remove margens padrão do body */
+  padding: 0; /* Remove padding padrão do body */
+}
+
 .App {
-  text-align: center;
-  margin: 0 auto;
+  background-color: rgb(137, 207, 209);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh; /* Garante que a div .App ocupe toda a altura da tela */
   padding: 20px;
-  max-width: 800px;
-}
-
-h1 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-}
-
-h2 {
-  font-size: 1.5rem;
-  margin-bottom: 20px;
+  box-sizing: border-box;
+  margin-top: 2px;
+  /* border: 3px solid #e02929; /* Borda de 3px ao redor da div .App */
 }
 
 .graph-container {
-  background-color: #f0f0f0; /* Cor de fundo cinza bem clarinho */
-  padding: 20px; /* Opcional: Adicione um pouco de espaçamento interno */
-  border-radius: 8px; /* Opcional: Adicione bordas arredondadas */
+  display: flex;
+  width: 100%;
+  justify-content: space-between; /* Distribui o espaço igualmente entre os gráficos */
+  height: 350px;
+  box-sizing: border-box; /* Inclui padding e border na largura total */
+  /* border: 3px solid #000; */ /* Borda de 3px ao redor da div .graph-container */
+}
+
+.chart-container {
+  flex: 1; /* Faz cada gráfico ocupar espaço igual dentro do contêiner */
+  margin: 0 10px; /* Margem horizontal entre os gráficos */
+  background-color: #f0f0f0; /* Fundo cinza */
+  padding: 5px;
+  box-sizing: border-box; /* Inclui padding e border na largura total */
+  border-top-left-radius: 5px; /* Bordas superiores arredondadas do gráfico */
+  border-top-right-radius: 5px; /* Bordas superiores arredondadas do gráfico */
+  text-align: center;
+  border: 3px solid #000; /* Borda de 3px ao redor da div .chart-container */
+  height: 400px;
+  border-radius: 18px;
+}
+
+/* Media query para telas pequenas */
+@media (max-width: 768px) {
+  .graph-container {
+    flex-direction: column; /* Coloca os gráficos em uma coluna */
+    height: auto; /* Ajusta a altura automaticamente */
+  }
+
+  .chart-container {
+    margin: 10px 0; /* Margem vertical para os gráficos empilhados */
+    width: 100%; /* Faz cada gráfico ocupar toda a largura do contêiner */
+  }
+}
+
+.temperature-panel-container {
+  width: 50%;
+  margin-top: 80px; /* Espaço acima do painel de temperatura */
+  background-color: #f0f0f0; /* Fundo cinza */
+  padding: 10px;
+  box-sizing: border-box;
+  text-align: center; /* Centraliza o conteúdo do painel */
+  border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
+  border-radius: 18px;
 }
 
 .tooltip-custom {
-  font-family: Arial, sans-serif;
-  color: #333;
-  font-weight: 100;
   font-size: 13px;
-}
-
-.apexcharts-bar-series .apexcharts-bar-area {
-  stroke-width: 0;
-  stroke: none;
 }
