--- a/dht22/frontend/src/App.css
+++ b/dht22/frontend/src/App.css
@@ -2,6 +2,7 @@ html, body {
   height: 100%; /* Garante que html e body ocupem 100% da altura da tela */
   margin: 0; /* Remove margens padrão do body */
   padding: 0; /* Remove padding padrão do body */
+  overflow-x: hidden; /* Evita rolagem horizontal */
 }
 
 .App {
@@ -11,11 +12,10 @@ html, body {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh; /* Garante que a div .App ocupe toda a altura da tela */
+  min-height: 100vh; /* Garante que a div .App ocupe pelo menos toda a altura da tela */
   padding: 20px;
   box-sizing: border-box;
   margin-top: 2px;
-  /* border: 3px solid #e02929; /* Borda de 3px ao redor da div .App */
 }
 
 .graph-container {
@@ -24,7 +24,6 @@ html, body {
   justify-content: space-between; /* Distribui o espaço igualmente entre os gráficos */
   height: 350px;
   box-sizing: border-box; /* Inclui padding e border na largura total */
-  /* border: 3px solid #000; */ /* Borda de 3px ao redor da div .graph-container */
 }
 
 .chart-container {
@@ -41,19 +40,6 @@ html, body {
   border-radius: 18px;
 }
 
-/* Media query para telas pequenas */
-@media (max-width: 768px) {
-  .graph-container {
-    flex-direction: column; /* Coloca os gráficos em uma coluna */
-    height: auto; /* Ajusta a altura automaticamente */
-  }
-
-  .chart-container {
-    margin: 10px 0; /* Margem vertical para os gráficos empilhados */
-    width: 100%; /* Faz cada gráfico ocupar toda a largura do contêiner */
-  }
-}
-
 .temperature-panel-container {
   width: 50%;
   margin-top: 80px; /* Espaço acima do painel de temperatura */
@@ -63,6 +49,31 @@ html, body {
   text-align: center; /* Centraliza o conteúdo do painel */
   border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
   border-radius: 18px;
+}
+
+/* Media query para telas pequenas */
+@media (max-width: 768px) {
+  .graph-container {
+    flex-direction: column; /* Coloca os gráficos em uma coluna */
+    height: auto; /* Ajusta a altura automaticamente */
+  }
+
+  .chart-container,
+  .temperature-panel-container {
+    margin: 10px 0; /* Margem vertical para espaçamento igual em dispositivos móveis */
+    width: 100%; /* Faz cada gráfico e painel ocupar toda a largura do contêiner */
+    height: 150px; /* Ajusta a altura para se adequar à tela pequena */
+  }
+
+  .RealTimeText {
+    margin-bottom: 0; /* Remove a margem inferior */
+    padding-bottom: 5px; /* Adiciona um pequeno padding para espaçamento */
+  }
+
+  .RealTimeGraph {
+    margin-top: 0; /* Remove a margem superior */
+    padding-top: 5px; /* Adiciona um pequeno padding para espaçamento */
+  }
 }
 
 .tooltip-custom {
