--- a/dht22/frontend/src/App.css
+++ b/dht22/frontend/src/App.css
@@ -29,7 +29,7 @@ html, body {
 .chart-container {
   flex: 1; /* Faz cada gráfico ocupar espaço igual dentro do contêiner */
   margin: 0 10px; /* Margem horizontal entre os gráficos */
-  background-color: #f0f0f0; /* Fundo cinza */
+  background-color: #ADD8E6; /* Fundo Azul bebê */
   padding: 5px;
   box-sizing: border-box; /* Inclui padding e border na largura total */
   border-top-left-radius: 5px; /* Bordas superiores arredondadas do gráfico */
@@ -38,17 +38,24 @@ html, body {
   border: 3px solid #000; /* Borda de 3px ao redor da div .chart-container */
   height: 400px;
   border-radius: 18px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
+}
+
+.font-smooth {
+  -webkit-font-smoothing: antialiased; /* Suavização para WebKit (Chrome, Safari) */
+  -moz-osx-font-smoothing: grayscale; /* Suavização para Firefox */
 }
 
 .temperature-panel-container {
   width: 50%;
   margin-top: 80px; /* Espaço acima do painel de temperatura */
-  background-color: #f0f0f0; /* Fundo cinza */
+  background-color: #ADD8E6; /* Fundo Azul bebê */
   padding: 10px;
   box-sizing: border-box;
   text-align: center; /* Centraliza o conteúdo do painel */
   border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
   border-radius: 18px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
 }
 
 /* Media query para telas pequenas */
@@ -78,4 +85,27 @@ html, body {
 
 .tooltip-custom {
   font-size: 13px;
+  text-align: center;
+}
+
+.header-title-container {
+  text-align: center;
+  margin-bottom: 20px;
+  padding: 20px;
+  background-color: #f0f8ff; /* Azul muito claro */
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
+}
+
+.header-title {
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: #333; /* Cor do texto */
+  margin: 0;
+}
+
+.header-subtitle {
+  font-size: 1.0rem;
+  color: #666; /* Cor do subtítulo */
+  margin: 0px 0 0;
 }
