--- a/dht22/frontend/src/assets/css/styles.css
+++ b/dht22/frontend/src/assets/css/styles.css
@@ -5,8 +5,23 @@ html, body {
   overflow-x: hidden; /* Evita rolagem horizontal */
 }
 
+.background {
+/*
+  background-image: url('../background.jpg'); 
+  min-height: 100vh; 
+  min-width: 100vw; 
+*/
+
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),  url('../background.jpg');
+  background-repeat: repeat; 
+  background-size: auto; 
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
+}
+
 .App {
-  background-color: rgb(137, 207, 209);
+  /* background-color: rgb(137, 207, 209); */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,7 +50,7 @@ html, body {
   border-top-left-radius: 5px; /* Bordas superiores arredondadas do gráfico */
   border-top-right-radius: 5px; /* Bordas superiores arredondadas do gráfico */
   text-align: center;
-  border: 3px solid #000; /* Borda de 3px ao redor da div .chart-container */
+  /* border: 3px solid #000; /* Borda de 3px ao redor da div .chart-container */
   height: 400px;
   border-radius: 18px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
@@ -53,7 +68,7 @@ html, body {
   padding: 10px;
   box-sizing: border-box;
   text-align: center; /* Centraliza o conteúdo do painel */
-  border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
+  /* border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
   border-radius: 18px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
 }
@@ -92,9 +107,10 @@ html, body {
   text-align: center;
   margin-bottom: 20px;
   padding: 20px;
-  background-color: #f0f8ff; /* Azul muito claro */
+  background-color: #ADD8E6; /* Azul muito claro */
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
+  /* border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
 }
 
 .header-title {
@@ -108,4 +124,14 @@ html, body {
   font-size: 1.0rem;
   color: #666; /* Cor do subtítulo */
   margin: 0px 0 0;
+}
+
+.font-size-1 {
+  font-size: 0.6rem; /* Ajuste o tamanho conforme necessário */
+  font-family: 'Roboto', Arial, sans-serif;
+  /* Você pode adicionar outras propriedades de estilo aqui, se necessário */
+}
+
+.graph-item {
+ /* background-color: none; */
 }
