--- a/dht22/frontend/src/assets/css/styles.css
+++ b/dht22/frontend/src/assets/css/styles.css
@@ -12,7 +12,7 @@ html, body {
   min-width: 100vw; 
 */
 
-  background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),  url('../background.jpg');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65)),  url('../background.jpg');
   background-repeat: repeat; 
   background-size: auto; 
   background-position: center;
@@ -65,7 +65,7 @@ html, body {
 .temperature-panel-container {
   width: 50%;
   margin-top: 80px; /* Espaço acima do painel de temperatura */
-  background-color: #ADD8E6; /* Fundo Azul bebê */
+  /* background-color: #ADD8E6; /* Fundo Azul bebê */
   padding: 10px;
   box-sizing: border-box;
   text-align: center; /* Centraliza o conteúdo do painel */
@@ -108,7 +108,7 @@ html, body {
   text-align: center;
   margin-bottom: 20px;
   padding: 20px;
-  background-color: #ADD8E6; /* Azul muito claro */
+ /* background-color: #ADD8E6; /* Azul muito claro */
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
   /* border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
