--- a/dht22/frontend/src/assets/css/styles.css
+++ b/dht22/frontend/src/assets/css/styles.css
@@ -14,10 +14,15 @@ html, body {
 
   background-image: linear-gradient(rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65)),  url('../background.jpg');
   background-repeat: repeat; 
-  background-size: auto; 
+  background-size: auto;  /* tamanho da imagem no centro... cover/auto */ 
   background-position: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh; /* Garante que o fundo cubra pelo menos a altura da tela */
+  position: center; /* Deixa a imagem em posição absoluta */
+  top: 0;
+  left: 0;
+  z-index: -1; /* Garante que o fundo fique atrás de todo o conteúdo */  
+
 
 }
 
