--- a/dht22/frontend/src/assets/css/styles.css
+++ b/dht22/frontend/src/assets/css/styles.css
@@ -12,7 +12,7 @@ html, body {
   min-width: 100vw; 
 */
 
-  background-image: linear-gradient(rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65)),  url('../background.jpg');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65)),  url('../images/background.jpg');
   background-repeat: repeat; 
   background-size: auto;  /* tamanho da imagem no centro... cover/auto */ 
   background-position: center;
