Cosmetics update (frontend)

--- a/dht22/frontend/src/assets/css/styles.css
+++ b/dht22/frontend/src/assets/css/styles.css
@@ -36,6 +36,15 @@ html, body {
   box-sizing: border-box;
 }
 
+.display-text {
+  display: flex;
+  flex-wrap: wrap; /* Permite que o conteúdo se mova para a linha seguinte se necessário */
+  padding-bottom: 20px;
+  max-width: 100%; /* Garante que o elemento não ultrapasse a largura da tela */
+  box-sizing: border-box; /* Inclui o padding e a borda na largura total */
+  font-size: clamp(1rem, 1.5vw + 0.5rem, 1rem); /* Ajusta o tamanho da fonte para diminuir mais em telas menores */
+}
+
 .temperature-panel {
   margin-top: 0px;
   padding: 0px;
@@ -47,6 +56,7 @@ html, body {
   justify-content: space-between; /* Distribui o espaço igualmente entre os gráficos */
   height: 350px;
   box-sizing: border-box; /* Inclui padding e border na largura total */
+  /*margin-top: 10px; /* Reduz a margem superior para 10px */
 }
 
 .chart-container {
@@ -58,12 +68,44 @@ html, body {
   border-top-left-radius: 5px; /* Bordas superiores arredondadas do gráfico */
   border-top-right-radius: 5px; /* Bordas superiores arredondadas do gráfico */
   text-align: center;
-  /* border: 3px solid #000; /* Borda de 3px ao redor da div .chart-container */
+
+  border: 3px solid #000; /* Borda de 3px ao redor da div .chart-container */
+
   height: 400px;
   border-radius: 18px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
-  margin-top: 15px;
+  margin-top: 0px;
+}
 
+
+.panel-container {
+  flex: 1;
+  margin: 0 10px 10px 10px; /* Reduz a margem inferior para 10px */
+  padding: 5px;
+  box-sizing: border-box;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border: 3px solid #000;
+  height: 100px;
+  width: 370px;
+  border-radius: 18px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9);
+  margin-top: 0px;
+
+  display: flex;
+  flex-direction: column; /* Coloca o conteúdo em coluna */
+  justify-content: center; /* Centraliza verticalmente */
+  align-items: center; /* Centraliza horizontalmente */
+  text-align: center;
+}
+
+/*.panel-container strong, */
+.panel-container span {
+  font-size: 35px; /* Aumenta a fonte em 15px (15px base + 15px adicional) */
+  display: block;
+  margin-bottom: 0px;
+  font-style: italic;
+  font-weight: bold; /* Define o texto em negrito */
 }
 
 .font-smooth {
@@ -78,7 +120,9 @@ html, body {
   padding: 10px;
   box-sizing: border-box;
   text-align: center; /* Centraliza o conteúdo do painel */
-  /* border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
+  
+  border: 3px solid #000; /* Borda de 3px ao redor da div .temperature-panel-container */
+  
   border-radius: 18px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9); /* Sombra suave */
 }
@@ -104,7 +148,7 @@ html, body {
   }
 
   .RealTimeGraph {
-    margin-top: 0; /* Remove a margem superior */
+    margin-top: 0px; /* Remove a margem superior */
     padding-top: 5px; /* Adiciona um pequeno padding para espaçamento */
   }
   .temperature-panel {
@@ -155,10 +199,32 @@ html, body {
   width: 99%; 
 }
 
+.temp-hot {
+  color: red;
+}
+
+.temp-cold {
+  color: blue;
+}
+
+.humidity-low {
+  color: rgb(247, 122, 6);
+}
+
+.humidity-high {
+  color: rgb(4, 136, 4);
+}
+
 /* Esconde o painel de temperatura e umidade em orientação vertical */
 @media (orientation: portrait) {
   .temperature-panel-container {
     display: none;
+  }
+  .display-text {
+    font-size: clamp(0.8rem, 1vw + 0.2rem, 0.8rem); /* Diminui mais a fonte no modo vertical */
+  }
+  .panel-container span {
+    font-size: 23px; /* Aumenta a fonte em 15px (15px base + 15px adicional) */
   }
 }
 
@@ -167,6 +233,7 @@ html, body {
   .temperature-panel-container {
     display: block;
   }
+  
 }
 
 @media (max-width: 600px) {
@@ -183,5 +250,6 @@ html, body {
     text-align: center;
     font-size: 15px;
   }
+ 
   
 }
