--- a/dht22/frontend/src/assets/css/styles.css
+++ b/dht22/frontend/src/assets/css/styles.css
@@ -31,6 +31,7 @@ html, body {
   align-items: center;
   justify-content: center;
   width: 100%;
+  height: 100%;
   min-height: 100vh; /* Garante que a div .App ocupe pelo menos toda a altura da tela */
   padding-top: 20px;
   box-sizing: border-box;
@@ -198,6 +199,7 @@ html, body {
 .chart-container-humid {
   width: 98.5%;
   height: 200%; /* Ajusta a altura para se adequar à tela pequena */
+  margin-bottom: 0px;
 }
 
 .temp-hot {
@@ -234,6 +236,9 @@ html, body {
 @media (orientation: landscape) {
   .temperature-panel-container {
     display: block;
+  }
+  .espacamento-entre-charts {
+    margin: 40px;
   }
   
 }
